Fixed minor spacing issue on my dining history component

--- a/react-app/src/components/Reservations/MyDiningHistory.css
+++ b/react-app/src/components/Reservations/MyDiningHistory.css
@@ -73,7 +73,7 @@
 }
 
 .dining-dashboard-points-container {
-    height: 380px;
+    height: 300px;
     background-color: white;
     margin-left: -24px;
 }
